# owlchess

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
chess/: Cargo.toml  build.rs
chess/benches/: chess.rs
chess/examples/: game.rs  monkey.rs  simple_cli.rs
chess/src/: attack.rs  between.rs  bitboard.rs  bitboard_consts.rs  board.rs  castling.rs  chain.rs  chess_move.rs  generic.rs  legal.rs  lib.rs  movegen.rs  moves.rs  pawns.rs  selftest.rs  types.rs  zobrist.rs
chess/src/moves/: base.rs  make.rs  mod.rs  moves.rs  san.rs  uci.rs
chess_base/: Cargo.toml  README.md
chess_base/src/: bitboard.rs  bitboard_consts.rs  geometry.rs  lib.rs  types.rs
