[workspace]
members = [
    "chess/",
    "chess_base/",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Alexander Kernozhitsky <kernalex256@yandex.by>"]
homepage = "https://github.com/alex65536/owlchess"
repository = "https://github.com/alex65536/owlchess"
license = "MIT"
keywords = ["games", "chess"]
categories = ["games", "parser-implementations"]
rust-version = "1.64.0"
