[package]
name = "owlchess"
version = "0.2.3"
edition = "2021"
description = "Yet another chess library for Rust"
authors = ["Alexander Kernozhitsky <kernalex256@yandex.by>"]
readme = "../README.md"
homepage = "https://github.com/alex65536/owlchess"
repository = "https://github.com/alex65536/owlchess"
license = "MIT"
keywords = ["games", "chess"]
categories = ["games", "parser-implementations"]

[dependencies]
owlchess_base = { path = "../chess_base", version = "0.2.3" }
thiserror = "1.0.31"
arrayvec = "0.7.2"

[build-dependencies]
owlchess_base = { path = "../chess_base", version = "0.2.3" }
rand_xoshiro = "0.6.0"
rand_core = "0.6.3"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[features]
selftest = []

[[bench]]
name = "chess"
harness = false
