[package]
name = "owlchess"
edition = "2021"
description = "Yet another chess library for Rust"
readme = "../README.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
owlchess_base = { path = "../chess_base", version = "0.3.2" }
thiserror = "1.0.31"
arrayvec = "0.7.2"

[build-dependencies]
owlchess_base = { path = "../chess_base", version = "0.3.2" }
rand_xoshiro = "0.6.0"
rand_core = "0.6.4"

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"

[features]
selftest = []

[[bench]]
name = "chess"
harness = false
