[package]
name = "owlchess_base"
version = "0.3.1"
edition = "2021"
description = "Base types for owlchess (not indended to use directly)"
authors = ["Alexander Kernozhitsky <kernalex256@yandex.by>"]
readme = "README.md"
homepage = "https://github.com/alex65536/owlchess"
repository = "https://github.com/alex65536/owlchess"
license = "MIT"
keywords = ["games", "chess"]
categories = ["games", "parser-implementations"]

[dependencies]
thiserror = "1.0.31"
derive_more = "0.99.17"
