[package]
name = "owlchess_base"
edition = "2021"
description = "Base types for owlchess (not indended to use directly)"
readme = "README.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1.0.31"
derive_more = "0.99.17"
